fixed some spacing, project finished

--- a/projects/movieseats/styles.css
+++ b/projects/movieseats/styles.css
@@ -64,10 +64,6 @@ select {
   font-weight: 700;
 }
 
-option {
-  text-align: center;
-}
-
 .info {
   background-color: var(--lighterDark);
 
